Old Things/TEST/Test.g
grammar Test;

options {
	output = AST;
	ASTLabelType = CommonTree;
}

tokens {
	TIMES;
}

program
	:	line+ EOF!
	;
line:	print_function ';'!
	|	int_assignment ';'!
	|	timeblock_inst ';'!
	|	and_stmt
	;
print_function
	:	PRINT^ '('! STRING ')'!
	;
int_assignment
	:	ID '='^ INT
	;
timeblock_inst
	:	TIMEBLOCK ID '=' timeblock -> ^('=' TIMEBLOCK ID timeblock)
	;
timeblock
	:	a=TIME '~' b=TIME -> ^(TIMES $a $b)
	;
and_stmt
	:	ID ('&'^ ID)*
	;
	
PRINT
	:	'print'
	;
TIMEBLOCK
	:	'timeblock'
	;
TIME:	('0'..'2')? ('0'..'9') ':' ('0'..'5')('0'..'9')
	;
	// military format for time
	// hours can have 1 or 2 digits

ID  :	('a'..'z'|'A'..'Z'|'_') ('a'..'z'|'A'..'Z'|'0'..'9'|'_')*
    ;

INT :	'0'..'9'+
    ;

FLOAT
    :   ('0'..'9')+ '.' ('0'..'9')* EXPONENT?
    |   '.' ('0'..'9')+ EXPONENT?
    |   ('0'..'9')+ EXPONENT
    ;

COMMENT
    :   '//' ~('\n'|'\r')* '\r'? '\n' {$channel=HIDDEN;}
    |   '/*' ( options {greedy=false;} : . )* '*/' {$channel=HIDDEN;}
    ;

WS  :   ( ' '
        | '\t'
        | '\r'
        | '\n'
        ) {$channel=HIDDEN;}
    ;

STRING
    :  '"' ( ESC_SEQ | ~('\\'|'"') )* '"'
    ;

CHAR:  '\'' ( ESC_SEQ | ~('\''|'\\') ) '\''
    ;

fragment
EXPONENT : ('e'|'E') ('+'|'-')? ('0'..'9')+ ;

fragment
HEX_DIGIT : ('0'..'9'|'a'..'f'|'A'..'F') ;

fragment
ESC_SEQ
    :   '\\' ('b'|'t'|'n'|'f'|'r'|'\"'|'\''|'\\')
    |   UNICODE_ESC
    |   OCTAL_ESC
    ;

fragment
OCTAL_ESC
    :   '\\' ('0'..'3') ('0'..'7') ('0'..'7')
    |   '\\' ('0'..'7') ('0'..'7')
    |   '\\' ('0'..'7')
    ;

fragment
UNICODE_ESC
    :   '\\' 'u' HEX_DIGIT HEX_DIGIT HEX_DIGIT HEX_DIGIT
    ;
